// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`intl-locale ast 1`] = `
Object {
  "extensions": Array [
    Object {
      "attributes": Array [
        "bar",
        "foo",
      ],
      "keywords": Array [
        Array [
          "ca",
          "buddhist",
        ],
        Array [
          "kk",
          "",
        ],
        Array [
          "nu",
          "thai",
        ],
      ],
      "type": "u",
    },
  ],
  "lang": Object {
    "lang": "en",
    "region": undefined,
    "script": undefined,
    "variants": Array [],
  },
}
`;

exports[`intl-locale ast 2`] = `
Object {
  "extensions": Array [
    Object {
      "attributes": Array [],
      "keywords": Array [
        Array [
          "ca",
          "gregory",
        ],
      ],
      "type": "u",
    },
  ],
  "lang": Object {
    "lang": "da",
    "region": undefined,
    "script": undefined,
    "variants": Array [],
  },
}
`;
